year initial UI implemented

--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -86,7 +86,8 @@
 
 
 .you-can-section {
-
+  display: flex;
+  overflow: hidden;
 }
 
 .you-can__body {
@@ -158,4 +159,170 @@
   bottom: 0;
   right: -130px;
   max-width: 70px;
+}
+
+
+/* OUR PLAYS SECTION */
+
+.our-plays-section {
+
+  /*background-color: var(--purple);*/
+  background-color: var(--purple);
+  color: var(--light-blue);
+  /*height: 100vh;*/
+  overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  padding: 60px;
+  position: relative;
+}
+.our-plays__container {
+
+  max-width: 100%;
+}
+
+.our-plays__title {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 60px;
+}
+.swiper-container.our-plays__swiper {
+  overflow: visible !important;
+  padding: 32px 0;
+}
+.our-plays__swiper .swiper-wrapper {
+  overflow: visible !important;
+  /*overflow-x: hidden !important;*/
+}
+.our-plays__slide {
+  transition: 0.3s ease-out;
+}
+.our-plays__slide.swiper-slide-active {
+  transform: scale(1.2);
+  position: relative;
+  z-index: 228;
+  /*margin: 0 32px;*/
+}
+.our-plays__slide-image {
+  display: block;
+  margin: 0 auto;
+  /*min-height: 320px;*/
+  max-height: 64vh;
+}
+.our-plays__pagination {
+  bottom: -40px;
+}
+
+@media screen and (max-width: 768px) {
+  .our-plays__swiper {
+    padding: 64px 0;
+  }
+  .our-plays__slide.swiper-slide-active {
+    transform: scale(1.3);
+  }
+  .our-plays__title {
+
+  }
+}
+
+.children-plays-section {
+  padding: 80px 0;
+}
+.children-plays-section > .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.children-plays__title {
+  background-color: var(--red);
+  color: var(--light-blue);
+  padding: 10px 20px;
+}
+
+.children-plays__years {
+}
+
+.years__top-line {
+  background-color: var(--blue);
+  height: 6px;
+  margin: 0 44px;
+}
+.years__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+.years__year {
+  font-size: 20px;
+  width: 40px;
+  height: 23px;
+  position: relative;
+
+  margin-top: 20px;
+  padding: 8px 24px;
+
+  /*transition: 0.3s linear;*/
+
+  user-select: none;
+  cursor: pointer;
+
+  border-radius: 8px;
+  background-color: white;
+
+}
+
+.years__year::before {
+  content: '';
+  display: block;
+  height: 8px;
+  width: 8px;
+  border-radius: 8px;
+  background-color: var(--blue);
+
+  transition: 0.3s ease-out;
+
+  position: absolute;
+  left: calc(44px - 4px); /* середина текстового дива */
+  top: calc(-7px - 20px); /* чтоб ровно по центру полосы. Полоса - 6px, шар – 8px -> среднее 7. а еще margin-top у года 20px */
+}
+.years__year::after {
+  content: '';
+  display: block;
+  height: 0;
+  width: 6px;
+  background-color: var(--blue);
+
+  transition: 0.3s ease-out;
+
+  position: absolute;
+  left: calc(44px - 3px); /* середина года */
+  top: calc(-20px); /* чтоб ровно по центру полосы. Полоса - 6px, шар – 8px -> среднее 7. а еще margin-top у года 20px */
+}
+.years__year:hover {
+  background-color: var(--blue);
+  color: var(--light-blue);
+}
+.years__year:hover::before {
+  transform: scale(1.6);
+  transform-origin: center center;
+}
+.years__year:hover::after {
+  height: 20px;
+}
+
+.years__year-blue-selection {
+  background-color: var(--blue);
+  position: absolute;
+
+  height: calc(23px + 8px + 8px);
+  width: 88px;
+  border-radius: 8px;
+  bottom: 0;
+  display: block;
 }
