--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -80,18 +80,18 @@
 </section>
 
 <section class="our-plays-section">
-  <div class="container">
-    <h3>Наши репертуарные спектакли</h3>
-    <div class="swiper-container">
+  <div class="our-plays__container">
+    <h3 class="our-plays__title">Наши репертуарные спектакли</h3>
+    <div class="swiper-container  our-plays__swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide">Урок Мужества</div>
-        <div class="swiper-slide">Оракул Любви</div>
-        <div class="swiper-slide">Петля Времени</div>
-        <div class="swiper-slide">Семейные Истории</div>
-        <div class="swiper-slide">Светлое Будущее</div>
+        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-urok.jpg" alt=""></div>
+        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-orakul.jpg" alt=""></div>
+        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-petlya.jpg" alt=""></div>
+        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-urok.jpg" alt=""></div>
+        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-orakul.jpg" alt=""></div>
       </div>
       <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
+      <div class="swiper-pagination our-plays__pagination"></div>
       <!-- Add Arrows -->
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
@@ -102,7 +102,21 @@
 <section class="children-plays-section">
 
   <div class="container">
-
+    <h3 class="children-plays__title">Каждый год готовим и показываем детские новогодние спектакли</h3>
+    <div class="children-plays__years years">
+      <div class="years__top-line"></div>
+      <div class="years__container">
+        <div class="years__year-blue-selection"></div>
+        <div class="years__year">2012</div>
+        <div class="years__year">2013</div>
+        <div class="years__year">2014</div>
+        <div class="years__year">2015</div>
+        <div class="years__year">2016</div>
+        <div class="years__year">2017</div>
+        <div class="years__year">2018</div>
+        <div class="years__year">2019</div>
+      </div>
+    </div>
   </div>
 
 </section>
