--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,6 +5,8 @@
   --red: #C35F67;
   --light-blue: #E4F3FF;
   --light-purple: #FECFFE;
+  --purple: #483296;
+  --blue: #006BF6;
 }
 body {
   margin: 0;
