--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -33,6 +33,10 @@
         <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-2.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-3.jpg" alt=""></div>
         <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-4.jpg" alt=""></div>
+        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-1.jpg" alt=""></div>
+        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-2.jpg" alt=""></div>
+        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-3.jpg" alt=""></div>
+        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-4.jpg" alt=""></div>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
@@ -111,12 +115,25 @@
         <div class="years__year">2013</div>
         <div class="years__year">2014</div>
         <div class="years__year">2015</div>
-        <div class="years__year">2016</div>
-        <div class="years__year">2017</div>
-        <div class="years__year">2018</div>
-        <div class="years__year">2019</div>
+<!--        <div class="years__year">2016</div>-->
+<!--        <div class="years__year">2017</div>-->
+<!--        <div class="years__year">2018</div>-->
+<!--        <div class="years__year">2019</div>-->
       </div>
     </div>
+    <div class="swiper-container children-plays__swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide children-plays__slide">Слайд 1 <div class="box"></div></div>
+        <div class="swiper-slide children-plays__slide">Слайд 2 <div class="box"></div></div>
+        <div class="swiper-slide children-plays__slide">Слайд 3 <div class="box"></div></div>
+        <div class="swiper-slide children-plays__slide">Слайд 4 <div class="box"></div></div>
+        <div class="swiper-slide children-plays__slide">Слайд 5 <div class="box"></div></div>
+        <div class="swiper-slide children-plays__slide">Слайд 6 <div class="box"></div></div>
+      </div>
+      <!-- Add Pagination -->
+      <div class="swiper-pagination"></div>
+    </div>
+
   </div>
 
 </section>
