--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -115,20 +115,26 @@
         <div class="years__year">2013</div>
         <div class="years__year">2014</div>
         <div class="years__year">2015</div>
-<!--        <div class="years__year">2016</div>-->
-<!--        <div class="years__year">2017</div>-->
-<!--        <div class="years__year">2018</div>-->
-<!--        <div class="years__year">2019</div>-->
+        <div class="years__year">2016</div>
+        <div class="years__year">2017</div>
+        <div class="years__year">2018</div>
+        <div class="years__year">2019</div>
       </div>
     </div>
     <div class="swiper-container children-plays__swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide children-plays__slide">Слайд 1 <div class="box"></div></div>
-        <div class="swiper-slide children-plays__slide">Слайд 2 <div class="box"></div></div>
-        <div class="swiper-slide children-plays__slide">Слайд 3 <div class="box"></div></div>
-        <div class="swiper-slide children-plays__slide">Слайд 4 <div class="box"></div></div>
-        <div class="swiper-slide children-plays__slide">Слайд 5 <div class="box"></div></div>
-        <div class="swiper-slide children-plays__slide">Слайд 6 <div class="box"></div></div>
+        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
+        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
+        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
+        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
+        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
+        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
+<!--        <div class="swiper-slide children-plays__slide">Слайд 1 <div class="box"></div></div>-->
+<!--        <div class="swiper-slide children-plays__slide">Слайд 2 <div class="box"></div></div>-->
+<!--        <div class="swiper-slide children-plays__slide">Слайд 3 <div class="box"></div></div>-->
+<!--        <div class="swiper-slide children-plays__slide">Слайд 4 <div class="box"></div></div>-->
+<!--        <div class="swiper-slide children-plays__slide">Слайд 5 <div class="box"></div></div>-->
+<!--        <div class="swiper-slide children-plays__slide">Слайд 6 <div class="box"></div></div>-->
       </div>
       <!-- Add Pagination -->
       <div class="swiper-pagination"></div>
