--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -88,7 +88,6 @@
 
 
 .you-can-section {
-  display: flex;
   overflow: hidden;
 }
 
@@ -135,8 +134,11 @@
 
 .decoration-silhouette {
   position: absolute;
-  max-width: 120px;
-  max-height: 120px;
+  /*max-width: 120px;*/
+  /*max-height: 120px;*/
+  user-select: none;
+  pointer-events: none;
+  display: block;
 }
 .mask-1 {
   left: -160px;
@@ -144,6 +146,7 @@
   max-width: 140px;
 }
 .mask-2 {
+  max-width: 130px;
   bottom: -60px;
   left: -150px;
 }
@@ -168,7 +171,6 @@
 
 .our-plays-section {
 
-  /*background-color: var(--purple);*/
   background-color: var(--purple);
   color: var(--light-blue);
   /*height: 100vh;*/
@@ -350,3 +352,75 @@
   width: 100px;
   background: radial-gradient(circle at 100px 0, lightgray, gray);
 }
+
+
+
+/* AWARDS SECTION */
+.awards-section {
+  background-color: var(--purple);
+  color: var(--light-blue);
+  min-height: 720px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.awards__body {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 520px;
+  margin: 0 auto;
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.awards__title {
+  font-size: 30px;
+  text-align: center;
+  position: absolute;
+  margin: 0 auto;
+  top: -28px;
+}
+
+.awards__cup-background {
+  height: 680px;
+  position: absolute;
+  pointer-events: none;
+  user-select: none;
+}
+
+.awards__list {
+  list-style-type: '— ';
+  position: relative;
+  z-index: 228;
+}
+.awards__award {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.top-left {
+  width: 280px;
+  top: -180px;
+  left: -240px;
+}
+.top-right {
+  width: 240px;
+  top: -180px;
+  right: -300px;
+}
+.bottom-left {
+  width: 240px;
+  bottom: -180px;
+  left: -280px;
+}
+.bottom-right {
+  width: 200px;
+  bottom: -180px;
+  right: -270px;
+}
+
