--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -147,39 +147,39 @@
 <section class="awards-section">
 
   <div class="awards__body">
-
-    <h3>МЫ</h3>
+    <img class="awards__cup-background" src="../../assets/images/images-by-nastya/sec-6-cup.png" alt="">
+    <h3 class="awards__title">МЫ</h3>
 
     <ul class="awards__list">
-      <li class="awards__award">Лауреаты театрального фестиваля "АПАРТ-Э" 2016</li>
-      <li class="awards__award">Обладатели гран-при фестиваля "Московская студенческая весна 2018" в номинации
+      <li class="awards__award"><strong>Лауреаты</strong> театрального фестиваля "АПАРТ-Э" 2016</li>
+      <li class="awards__award">Обладатели <strong>гран-при</strong> фестиваля "Московская студенческая весна 2018" в номинации
         "Оригинальный жанр"
       </li>
-      <li class="awards__award">Лауреаты второй степени фестиваля "Российская студенческая весна 2018" в номинации
+      <li class="awards__award"><strong>Лауреаты второй степени</strong> фестиваля "Российская студенческая весна 2018" в номинации
         "Оригинальный жанр"
       </li>
-      <li class="awards__award">Победители V открытого городского фестиваля молодежных любительских театров «АПАРТЕ» в
+      <li class="awards__award"><strong>Победители</strong> V открытого городского фестиваля молодежных любительских театров «АПАРТЕ» в
         номинациях «Лучший
         молодежный театр», «Лучший дуэт», «Лучшая мужская роль второго плана»,
       </li>
-      <li class="awards__award">Обладатели Гран-при конкурса «Студент года – 2019» в номинации «Творческий клуб года»
+      <li class="awards__award">Обладатели <strong>Гран-при</strong> конкурса «Студент года – 2019» в номинации «Творческий клуб года»
       </li>
-      <li class="awards__award">Лауреаты I степени VII Всероссийского театрального фестиваля «Феникс», а также
+      <li class="awards__award"><strong>Лауреаты I степени</strong> VII Всероссийского театрального фестиваля «Феникс», а также
         победители в номинациях
         «Лучший костюм», «Лучшая женская роль» и «Лучшая мужская острохарактерная роль»
       </li>
-      <li class="awards__award">Гран-при IV фестиваля «Московская студенческая весна» в номинации «Оригинальный жанр» в
+      <li class="awards__award"><strong>Гран-при</strong> IV фестиваля «Московская студенческая весна» в номинации «Оригинальный жанр» в
         направлении
         «Иллюзия» .
       </li>
     </ul>
 
-  </div>
+    <img src="../../assets/images/images-by-nastya/sec-6-dancer-top-left.svg" alt="" class="decoration-silhouette top-left">
+    <img src="../../assets/images/images-by-nastya/sec-6-dancer-bottom-left.svg" alt="" class="decoration-silhouette bottom-left">
+    <img src="../../assets/images/images-by-nastya/sec-6-dancer-bottom-right.svg" alt="" class="decoration-silhouette bottom-right">
+    <img src="../../assets/images/images-by-nastya/sec-6-dancer-top-right.svg" alt="" class="decoration-silhouette top-right">
 
-  <img src="" alt="" class="decoration-silhouette top-left">
-  <img src="" alt="" class="decoration-silhouette bottom-left">
-  <img src="" alt="" class="decoration-silhouette bottom-right">
-  <img src="" alt="" class="decoration-silhouette top-right">
+  </div>
 
 </section>
 
