--- a/src/style/style.css
+++ b/src/style/style.css
@@ -14,6 +14,7 @@ body {
   /*font-family: "DIN Pro", sans-serif;*/
   font-weight: 300;
   /*font-size: 20px;*/
+  overflow-x: hidden;
 }
 h1,h2,h3,h4,h5,h6 {
   font-weight: 300;
