--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -8,199 +8,20 @@
   <div class="intro__arrow-down"></div>
 </section>
 
-<section class="activities-section">
+<app-activities-section></app-activities-section>
 
-  <div class="container">
-    <h3 class="activities__text">Коллектив собрал в себе разносторонних людей,<br>которым интересно творчество в его
-      совокупности</h3>
+<app-you-can-section></app-you-can-section>
 
-    <div class="activities__list">
-        <div class="activity">Хареография</div>
-        <div class="activity">Актерское мастерство</div>
-        <div class="activity">Вокальное исполнение</div>
-        <div class="activity">Юмор</div>
-        <div class="activity">Сценарное искусство</div>
-        <div class="activity">Сценография</div>
-        <div class="activity">Оригинальный жанр</div>
-        <div class="activity">И многое другое</div>
-    </div>
-  </div>
+<app-our-plays-section></app-our-plays-section>
 
-  <div class="container">
-    <div class="swiper-container activities-swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-1.jpg" alt=""></div>
-        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-2.jpg" alt=""></div>
-        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-3.jpg" alt=""></div>
-        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-4.jpg" alt=""></div>
-        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-1.jpg" alt=""></div>
-        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-2.jpg" alt=""></div>
-        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-3.jpg" alt=""></div>
-        <div class="swiper-slide activity-slide"><img class="activity-image" src="../../assets/images/images-by-nastya/sec-2-img-4.jpg" alt=""></div>
-      </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-    </div>
-  </div>
+<app-children-plays-section></app-children-plays-section>
 
-</section>
-
-<section class="you-can-section">
-
-  <div class="you-can__body">
-
-    <h3 class="you-can__title">У нас можно</h3>
-    <div class="you-can__split-view">
-      <ul class="split-view__text-side">
-        <li class="split-view__parah">Заниматься актерским мастерством и режиссурой</li>
-        <li class="split-view__parah">Проходить тренинги по развитию актерских способностей и сценодвижению, ораторскому
-          искусству
-        </li>
-        <li class="split-view__parah">Стать лучшим актером/актрисой университета</li>
-        <li class="split-view__parah active">Создать и воплотить в жизнь свой собственный творческий сценарий</li>
-        <li class="split-view__parah">Участвовать в международных театральных и творческих фестивалях</li>
-      </ul>
-      <div class="split-view__image-side">
-        <div class="swiper-container">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-man.svg" alt=""></div>
-            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-parah-img.svg" alt=""></div>
-            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-man.svg" alt=""></div>
-            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-parah-img.svg" alt=""></div>
-            <div class="swiper-slide split-view__image"><img class="image" src="../../assets/images/images-by-nastya/sec-3-man.svg" alt=""></div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <img src="../../assets/images/images-by-nastya/sec-3-mask-1.svg" alt="" class="decoration-silhouette mask-1">
-    <img src="../../assets/images/images-by-nastya/sec-3-mask-2.svg" alt="" class="decoration-silhouette mask-2">
-    <img src="../../assets/images/images-by-nastya/sec-3-lamp.svg" alt="" class="decoration-silhouette lamp">
-    <img src="../../assets/images/images-by-nastya/sec-3-pen.svg" alt="" class="decoration-silhouette pen">
-    <img src="../../assets/images/images-by-nastya/sec-3-book.svg" alt="" class="decoration-silhouette book">
-
-  </div>
-
-</section>
-
-<section class="our-plays-section">
-  <div class="our-plays__container">
-    <h3 class="our-plays__title">Наши репертуарные спектакли</h3>
-    <div class="swiper-container  our-plays__swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-urok.jpg" alt=""></div>
-        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-orakul.jpg" alt=""></div>
-        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-petlya.jpg" alt=""></div>
-        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-urok.jpg" alt=""></div>
-        <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image" src="../../assets/images/images-by-nastya/sec-4-orakul.jpg" alt=""></div>
-      </div>
-      <!-- Add Pagination -->
-      <div class="swiper-pagination our-plays__pagination"></div>
-      <!-- Add Arrows -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-    </div>
-  </div>
-</section>
-
-<section class="children-plays-section">
-
-  <div class="container">
-    <h3 class="children-plays__title">Каждый год готовим и показываем детские новогодние спектакли</h3>
-    <div class="children-plays__years years">
-      <div class="years__top-line"></div>
-      <div class="years__container">
-        <div class="years__year-blue-selection"></div>
-        <div class="years__year">2012</div>
-        <div class="years__year">2013</div>
-        <div class="years__year">2014</div>
-        <div class="years__year">2015</div>
-        <div class="years__year">2016</div>
-        <div class="years__year">2017</div>
-        <div class="years__year">2018</div>
-        <div class="years__year">2019</div>
-      </div>
-    </div>
-    <div class="swiper-container children-plays__swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
-        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
-        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
-        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
-        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
-        <div class="swiper-slide children-plays__slide"><img class="children-plays__image image" src="../../assets/images/images-by-nastya/sec-5-2014.jpg" alt=""></div>
-<!--        <div class="swiper-slide children-plays__slide">Слайд 1 <div class="box"></div></div>-->
-<!--        <div class="swiper-slide children-plays__slide">Слайд 2 <div class="box"></div></div>-->
-<!--        <div class="swiper-slide children-plays__slide">Слайд 3 <div class="box"></div></div>-->
-<!--        <div class="swiper-slide children-plays__slide">Слайд 4 <div class="box"></div></div>-->
-<!--        <div class="swiper-slide children-plays__slide">Слайд 5 <div class="box"></div></div>-->
-<!--        <div class="swiper-slide children-plays__slide">Слайд 6 <div class="box"></div></div>-->
-      </div>
-      <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
-    </div>
-
-  </div>
-
-</section>
-
-<section class="awards-section">
-
-  <div class="awards__body">
-    <img class="awards__cup-background" src="../../assets/images/images-by-nastya/sec-6-cup.png" alt="">
-    <h3 class="awards__title">МЫ</h3>
-
-    <ul class="awards__list">
-      <li class="awards__award"><strong>Лауреаты</strong> театрального фестиваля "АПАРТ-Э" 2016</li>
-      <li class="awards__award">Обладатели <strong>гран-при</strong> фестиваля "Московская студенческая весна 2018" в номинации
-        "Оригинальный жанр"
-      </li>
-      <li class="awards__award"><strong>Лауреаты второй степени</strong> фестиваля "Российская студенческая весна 2018" в номинации
-        "Оригинальный жанр"
-      </li>
-      <li class="awards__award"><strong>Победители</strong> V открытого городского фестиваля молодежных любительских театров «АПАРТЕ» в
-        номинациях «Лучший
-        молодежный театр», «Лучший дуэт», «Лучшая мужская роль второго плана»,
-      </li>
-      <li class="awards__award">Обладатели <strong>Гран-при</strong> конкурса «Студент года – 2019» в номинации «Творческий клуб года»
-      </li>
-      <li class="awards__award"><strong>Лауреаты I степени</strong> VII Всероссийского театрального фестиваля «Феникс», а также
-        победители в номинациях
-        «Лучший костюм», «Лучшая женская роль» и «Лучшая мужская острохарактерная роль»
-      </li>
-      <li class="awards__award"><strong>Гран-при</strong> IV фестиваля «Московская студенческая весна» в номинации «Оригинальный жанр» в
-        направлении
-        «Иллюзия» .
-      </li>
-    </ul>
-
-    <img src="../../assets/images/images-by-nastya/sec-6-dancer-top-left.svg" alt="" class="decoration-silhouette top-left">
-    <img src="../../assets/images/images-by-nastya/sec-6-dancer-bottom-left.svg" alt="" class="decoration-silhouette bottom-left">
-    <img src="../../assets/images/images-by-nastya/sec-6-dancer-bottom-right.svg" alt="" class="decoration-silhouette bottom-right">
-    <img src="../../assets/images/images-by-nastya/sec-6-dancer-top-right.svg" alt="" class="decoration-silhouette top-right">
-
-  </div>
-
-</section>
-
-<section class="final-slogan-section">
-  <div class="container">
-    <!--    <img src="" alt="">-->
-    <div class="text-logo">
-      <div class="text-logo_p1">ТВОРЧЕСКАЯ</div>
-      <div class="text-logo_p2">МАСТЕРСКАЯ</div>
-    </div>
-    <div class="sl-2">это</div>
-    <div class="sl-3">коллектив</div>
-    <div class="sl-4">активных разносторонних людей</div>
-    <div class="sl-5">которые хотят познать все грани творчества!</div>
-  </div>
-</section>
+<app-final-slogan-section></app-final-slogan-section>
 
 <section class="join-us-section">
-  <div class="join-us__label">Хочешь к нам?</div>
-  <div class="">
-    <a href="">Как стать участником коллектива</a>
-    <a href="">Узнать о ближайших выступлениях</a>
+  <h3 class="join-us__label">Хочешь к нам?</h3>
+  <div class="join-us__link-container">
+    <a href="" class="join-us__how-to-become-member-link">Как стать участником коллектива</a>
+    <a href="" class="join-us__to-events-link">Узнать о ближайших выступлениях</a>
   </div>
 </section>
