added placeholders to other pages

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,1 +1,61 @@
-<p>about-page works!</p>
+
+<div style="text-align: center; color: gray; font-size: 10px;">(заглушка)</div>
+<div class="container">
+  <h2>Добро пожаловать в Творческую мастерскую Московского Политеха!</h2>
+  <h3>Наше коллектив открыт для самых активных, творческих, неординарных людей! Здесь мы раскрываем все возможности и
+    таланты человека!</h3>
+
+  <blockquote>Коллектив собрал в себе разносторонних людей, которым интересно творчество в его совокупности: это и
+    хореография, актерское мастерство, вокальное исполнение, юмор, сценарное искусство, сценография, оригинальный жанр и
+    многое другое. Коллектив активно принимает участие в межвузовских конкурсах и фестивалях.
+  </blockquote>
+
+  <h3>У нас можно:</h3>
+  <ul>
+    <li>заниматься актерским мастерством и режиссурой;</li>
+    <li>проходить тренинги по развитию актерских способностей и сценодвижению, ораторскому искусству;</li>
+    <li>стать лучшим актером/актрисой университета;</li>
+    <li>создать и воплотить в жизнь свой собственный творческий сценарий;</li>
+    <li>участвовать в международных театральных и творческих фестивалях.</li>
+  </ul>
+
+  <h3>Наши репертуарные спектакли:</h3>
+  <ul>
+    <li>Музыкальный спектакль "Петля времени"</li>
+    <li>Воено-патриотический спектакль "Урок мужества"</li>
+    <li>Драматический спектакль "Оракул любви"</li>
+    <li>Драматический спектакль "Светлое будущее"</li>
+    <li>Драматический спектакль "Семейные истории"</li>
+  </ul>
+
+  <h3> Каждый год готовим и показываем детские новогодние спектакли, наш небольшой списочек:</h3>
+  <ul>
+    <li>2012 год: "Новогодние приключения Маши и Вити"</li>
+    <li>2013 год: "Старая, старая сказка"</li>
+    <li>2014 год: "Бременские музыканты"</li>
+    <li>2015 год: "Приключения Буратино"</li>
+    <li>2016 год: "Волшебный голос Джельсомино "</li>
+    <li>2017 год: "Приключения Красной Шапочки"</li>
+    <li>2018 год: "Мэри Поппинс"</li>
+    <li>2019 год: "Бременские музыканты"</li>
+  </ul>
+  <h3>Мы:</h3>
+  <ul>
+    <li>Лауреаты театрального фестиваля "АПАРТ-Э" 2016</li>
+    <li>Обладатели гран-при фестиваля "Московская студенческая весна 2018" в номинации "Оригинальный жанр"</li>
+    <li>Лауреаты второй степени фестиваля "Российская студенческая весна 2018" в номинации "Оригинальный жанр"
+      победители V открытого городского фестиваля молодежных любительских театров «АПАРТЕ» в номинациях «Лучший
+      молодежный
+      театр», «Лучший дуэт», «Лучшая мужская роль второго плана»
+    </li>
+    <li>обладатели Гран-при конкурса «Студент года – 2019» в номинации «Творческий клуб года»</li>
+    <li>лауреаты I степени VII Всероссийского театрального фестиваля «Феникс», а также победители в номинациях «Лучший
+      костюм», «Лучшая женская роль» и «Лучшая мужская острохарактерная роль»
+    </li>
+    <li>гран-при IV фестиваля «Московская студенческая весна» в номинации «Оригинальный жанр» в направлении «Иллюзия» .
+    </li>
+  </ul>
+  <h2>Творческая мастерская Московского Политеха - это коллектив активных разносторонних людей, которые хотят познать
+    все
+    грани творчества!</h2>
+</div>
