--- a/src/app/contacts-page/contacts-page.component.html
+++ b/src/app/contacts-page/contacts-page.component.html
@@ -1,1 +1,2 @@
-<p>contacts-page works!</p>
+<h1 style="margin: 150px 0 0px; text-align: center">Самвел Микиртычев в ВК: <a href="https://vk.com/samvelmik" target="_blank">samvelmik</a></h1>
+<div style="text-align: center; color: gray; font-size: 10px;margin-bottom: 250px;">(заглушка)</div>
