--- a/src/app/events-page/events-page.component.html
+++ b/src/app/events-page/events-page.component.html
@@ -1,1 +1,2 @@
-<p>events-page works!</p>
+<h1 style="text-align: center; margin-top: 150px;">Здесь будет афиша</h1>
+<div style="text-align: center; color: gray; font-size: 10px;margin-bottom: 250px;">(заглушка)</div>
