--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -4,6 +4,7 @@
       <img class="intro__image" src="../../assets/images/text-red-logo.png" alt="">
       <h3 class="intro__greeting">Добро пожаловать</h3>
     </div>
+    <img src="../../assets/images/images-by-nastya/" alt="">
   </div>
   <div class="intro__arrow-down"></div>
 </section>
@@ -16,12 +17,14 @@
 
 <app-children-plays-section></app-children-plays-section>
 
+<app-awards-section></app-awards-section>
+
 <app-final-slogan-section></app-final-slogan-section>
 
 <section class="join-us-section">
   <h3 class="join-us__label">Хочешь к нам?</h3>
   <div class="join-us__link-container">
     <a href="" class="join-us__how-to-become-member-link">Как стать участником коллектива</a>
-    <a href="" class="join-us__to-events-link">Узнать о ближайших выступлениях</a>
+    <a routerLink="events" class="join-us__to-events-link">Узнать о ближайших выступлениях</a>
   </div>
 </section>
