--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,3 +38,12 @@ a:hover {
   max-height: 100%;
   display: inline-block;
 }
+
+.decoration-silhouette {
+  position: absolute;
+  /*max-width: 120px;*/
+  /*max-height: 120px;*/
+  user-select: none;
+  pointer-events: none;
+  display: block;
+}
