--- a/src/app/master/header/header.component.html
+++ b/src/app/master/header/header.component.html
@@ -10,9 +10,9 @@
       <div class="nav-item"><a routerLink="" class="nav-link">Главная</a></div>
       <div class="nav-item"><a routerLink="about" class="nav-link">О нас</a></div>
       <div class="nav-item"><a routerLink="events" class="nav-link">Афиша</a></div>
-      <div class="nav-item"><a routerLink="gallery" class="nav-link">Галерея</a></div>
-      <div class="nav-item"><a routerLink="portfolio" class="nav-link">Портфолио</a></div>
-      <div class="nav-item"><a routerLink="members" class="nav-link">Участники</a></div>
+<!--      <div class="nav-item"><a routerLink="gallery" class="nav-link">Галерея</a></div>-->
+<!--      <div class="nav-item"><a routerLink="portfolio" class="nav-link">Портфолио</a></div>-->
+<!--      <div class="nav-item"><a routerLink="members" class="nav-link">Участники</a></div>-->
       <div class="nav-item"><a routerLink="contacts" class="nav-link">Контакты</a></div>
     </div>
   </div>
