added comments for Nastya

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -17,7 +17,8 @@
 
 <app-children-plays-section></app-children-plays-section>
 
-<app-awards-section></app-awards-section>
+<app-awards-section
+[scrollCtrl]="scrollCtrl"></app-awards-section>
 
 <app-final-slogan-section></app-final-slogan-section>
 
