Added animation for you-can-section - also changed animation for awards-section

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -11,14 +11,15 @@
 
 <app-activities-section></app-activities-section>
 
-<app-you-can-section></app-you-can-section>
+<app-you-can-section
+  [scrollCtrl]="scrollCtrl"></app-you-can-section>
 
 <app-our-plays-section></app-our-plays-section>
 
 <app-children-plays-section></app-children-plays-section>
 
 <app-awards-section
-[scrollCtrl]="scrollCtrl"></app-awards-section>
+  [scrollCtrl]="scrollCtrl"></app-awards-section>
 
 <app-final-slogan-section></app-final-slogan-section>
 
