--- a/src/app/main-page/awards-section/awards-section.component.css
+++ b/src/app/main-page/awards-section/awards-section.component.css
@@ -55,6 +55,7 @@
   width: 240px;
   top: -180px;
   right: -300px;
+  transform: scale(-1, 1);
 }
 .bottom-left {
   width: 240px;
@@ -65,4 +66,5 @@
   width: 200px;
   bottom: -180px;
   right: -270px;
+  transform: scale(-1, 1);
 }
