--- a/src/app/main-page/you-can-section/you-can-section.component.css
+++ b/src/app/main-page/you-can-section/you-can-section.component.css
@@ -1,6 +1,6 @@
 
 .you-can-section {
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .you-can__body {
@@ -66,7 +66,7 @@
   max-width: 160px;
 }
 .pen {
-  bottom: 0;
+  bottom: 150px;
   right: -130px;
   max-width: 70px;
 }
