passed scollCtrl to all internal modules

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -9,19 +9,23 @@
   <div class="intro__arrow-down"></div>
 </section>
 
-<app-activities-section></app-activities-section>
+<app-activities-section
+  [scrollCtrl]="scrollCtrl"></app-activities-section>
 
 <app-you-can-section
   [scrollCtrl]="scrollCtrl"></app-you-can-section>
 
-<app-our-plays-section></app-our-plays-section>
+<app-our-plays-section
+  [scrollCtrl]="scrollCtrl"></app-our-plays-section>
 
-<app-children-plays-section></app-children-plays-section>
+<app-children-plays-section
+  [scrollCtrl]="scrollCtrl"></app-children-plays-section>
 
 <app-awards-section
   [scrollCtrl]="scrollCtrl"></app-awards-section>
 
-<app-final-slogan-section></app-final-slogan-section>
+<app-final-slogan-section
+  [scrollCtrl]="scrollCtrl"></app-final-slogan-section>
 
 <section class="join-us-section">
   <h3 class="join-us__label">Хочешь к нам?</h3>
